--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.10",
     "howler": "^2.2.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "moment": "^2.30.1",
     "mui-color-input": "^2.0.3",
     "notistack": "^3.0.1",
