--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "howler": "^2.2.4",
     "html2canvas": "^1.4.1",
@@ -30,8 +30,6 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
-    "react-webcam-barcode-scanner": "^0.0.2-rc2",
-    "use-scan-detection": "^0.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -57,5 +55,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2"
   }
 }
